--- a/server/pom.xml
+++ b/server/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-core</artifactId>
-            <version>[2.0.0,3.0.0)</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
