--- a/slack/pom.xml
+++ b/slack/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-core</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 </project>
