--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -92,6 +92,7 @@
             <groupId>com.sun</groupId>
             <artifactId>tools</artifactId>
             <version>1.8.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
