--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[1.0.0, 2.0.0]</version>
+            <version>[2.0.0,3.0.0]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>konos-rest-accessor-java</artifactId>
-            <version>1.0.1</version>
+            <version>1.1.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
