--- a/datalake/pom.xml
+++ b/datalake/pom.xml
@@ -71,9 +71,9 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
-            <groupId>io.intino.ness</groupId>
-            <artifactId>ness</artifactId>
-            <version>1.0.0</version>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>konos-jms</artifactId>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
