--- a/ide/model/pom.xml
+++ b/ide/model/pom.xml
@@ -9,7 +9,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <tara.level>Application</tara.level>
+        <tara.level>Product</tara.level>
         <tara.dsl>Proteo</tara.dsl>
         <tara.dsl.version>1.0.0</tara.dsl.version>
         <tara.out.dsl>Konos</tara.out.dsl>
@@ -74,7 +74,7 @@
                 </exclusion>
             </exclusions>
             <scope>provided</scope>
-            <version>1.0.6</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
