--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -9,7 +9,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <tara.level>Application</tara.level>
+        <tara.level>Product</tara.level>
         <tara.dsl>Proteo</tara.dsl>
         <tara.dsl.version>LATEST</tara.dsl.version>
         <tara.out.dsl>Konos</tara.out.dsl>
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[2.0.0,3.0.0]</version>
+            <version>[2.1.0,3.0.0]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -59,7 +59,7 @@
             <groupId>io.intino.tara</groupId>
             <artifactId>magritte</artifactId>
             <scope>test</scope>
-            <version>1.0.6</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.esotericsoftware</groupId>
@@ -70,7 +70,7 @@
             <groupId>org.siani.itrules</groupId>
             <artifactId>itrules</artifactId>
             <scope>test</scope>
-            <version>LATEST</version>
+            <version>1.9.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.shared</groupId>
