--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[3.0.1,3.1.0]</version>
+            <version>[3.0.1, 3.1.0]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -60,6 +60,12 @@
             <artifactId>magritte</artifactId>
             <scope>test</scope>
             <version>2.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>io</artifactId>
+            <scope>test</scope>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>com.esotericsoftware</groupId>
