--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -9,11 +9,9 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <tara.level>Product</tara.level>
-        <tara.dsl>Proteo</tara.dsl>
-        <tara.dsl.version>1.0.0</tara.dsl.version>
-        <tara.out.dsl>Konos</tara.out.dsl>
-        <tara.out.dsl.version>${project.version}</tara.out.dsl.version>
+        <tara.level>Solution</tara.level>
+        <tara.dsl>Konos</tara.dsl>
+        <tara.dsl.version>3.2.0</tara.dsl.version>
         <tara.working.package>io.intino.konos.builder</tara.working.package>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
