--- a/ness-accessor/pom.xml
+++ b/ness-accessor/pom.xml
@@ -77,6 +77,12 @@
             <version>1.0.3</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
