--- a/ness-accessor/pom.xml
+++ b/ness-accessor/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>alexandria-ness-accessor</artifactId>
-    <version>1.0.8</version>
+    <version>2.0.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -80,6 +80,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.ness</groupId>
+            <artifactId>datalake</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
