--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[3.6.1, 4.0.0]</version>
+            <version>[4.0.1, 4.0.1]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-ui</artifactId>
-            <version>[1.6.2, 2.0.0)</version>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -122,6 +122,12 @@
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-rest-accessor-java</artifactId>
             <version>1.1.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>alexandria-ui</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
