--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -130,5 +130,11 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>builder</artifactId>
+            <version>4.0.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
