--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[4.0.2, 5.0.0]</version>
+            <version>[4.1.3, 5.0.0]</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -129,6 +129,12 @@
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-ui</artifactId>
             <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>alexandria-rest</artifactId>
+            <version>2.2.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
