--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-rest-accessor-java</artifactId>
-            <version>1.1.4</version>
+            <version>LATEST</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
