--- a/alexandria/ui/pom.xml
+++ b/alexandria/ui/pom.xml
@@ -62,7 +62,12 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>alexandria-rest</artifactId>
-            <version>[2.2.1, 3.0.0)</version>
+            <version>[2.2.3, 3.0.0)</version>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.konos</groupId>
+            <artifactId>alexandria-rest-accessor-java</artifactId>
+            <version>[1.1.6, 2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
