--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -55,10 +55,9 @@
             <version>2.1.8</version>
         </dependency>
         <dependency>
-            <groupId>io.intino.tara</groupId>
-            <artifactId>io</artifactId>
-            <scope>test</scope>
-            <version>1.0</version>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.siani.itrules</groupId>
