--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ dependency-reduced-pom.xml
 .idea/compiler.xml
 alexandria/activity-elements-activity/gulpFile.js
 alexandria/activity-elements-activity/package.json
+gulpFile.js
