--- a/ide/builder/pom.xml
+++ b/ide/builder/pom.xml
@@ -125,5 +125,11 @@
             <scope>provided</scope>
             <version>2.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
