--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -22,11 +22,19 @@
         <directory>../../out/build/builder-test</directory>
     </build>
 
+    <repositories>
+        <repository>
+            <id>intino-maven</id>
+            <name>intino-maven-releases</name>
+            <url>https://artifactory.intino.io/artifactory/releases</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>[4.1.7, 5.0.0]</version>
+            <version>5.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -43,79 +51,50 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <scope>test</scope>
-            <version>2.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.tara</groupId>
-            <artifactId>magritte</artifactId>
-            <scope>test</scope>
-            <version>2.1.8</version>
-        </dependency>
-        <dependency>
-            <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
-            <version>4.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.siani.itrules</groupId>
-            <artifactId>itrules</artifactId>
-            <scope>test</scope>
-            <version>1.9.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.shared</groupId>
-            <artifactId>maven-invoker</artifactId>
-            <scope>test</scope>
-            <version>2.0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-ui</artifactId>
-            <version>[1.0.0,2.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-jmx</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-scheduler</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-jms</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-ness-accessor</artifactId>
-            <version>[2.0.0, 3.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-slack</artifactId>
-            <version>[1.0.0, 2.0.0)</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-rest</artifactId>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>ui</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.intino.konos</groupId>
-            <artifactId>alexandria-rest-accessor-java</artifactId>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>jmx</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>scheduler</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>jms</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>ness-accessor</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>slack</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>rest</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>rest-accessor</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
