--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -38,6 +38,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.intino.tara</groupId>
+            <artifactId>magritte</artifactId>
+            <version>2.1.9</version>
+        </dependency>
+        <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>model</artifactId>
             <scope>test</scope>
