--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -38,9 +38,33 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <scope>test</scope>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.intino.tara</groupId>
             <artifactId>magritte</artifactId>
+            <scope>test</scope>
             <version>2.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.siani.itrules</groupId>
+            <artifactId>itrules</artifactId>
+            <scope>test</scope>
+            <version>1.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <scope>test</scope>
+            <version>2.0.11</version>
         </dependency>
         <dependency>
             <groupId>io.intino.konos</groupId>
